--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
 
     </div>
 
-    <footer>
+    <footer style="background-color: #131A22;">
         <div class="foot-panel1">
             <a href="#">
                 <div class="back-to-top">
